feat: up to Phase E implementation with React Native integration
- Demo Plaid Link integration working
- Real sandbox account and transaction data sync
- Smart category inference for sandbox
- Navigation-based data refresh
- Robust date handling

--- a/daily-dough-api/.gitignore
+++ b/daily-dough-api/.gitignore
@@ -44,3 +44,9 @@ next-env.d.ts
 .env
 .env.*
 !.env.example
+
+# development and testing files
+/tests/
+/app/api/test-*
+/app/api/debug/
+/scripts/test-*.js
