--- a/daily-dough-native/package.json
+++ b/daily-dough-native/package.json
@@ -9,23 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
     "expo": "53.0.22",
     "expo-router": "~5.1.5",
+    "expo-secure-store": "~14.2.4",
     "expo-status-bar": "~2.2.3",
     "lucide-react-native": "^0.540.0",
     "moti": "^0.30.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-plaid-link-sdk": "^12.5.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-svg": "15.11.2",
-    "tailwindcss": "^3.4.17",
-    "react-dom": "19.0.0",
     "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4",
-    "expo-secure-store": "~14.2.4"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
